<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.ResetPassWordActivity">

    <include layout="@layout/in_toolbar_accent"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/tv_labe_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_validate_lable1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/wallet_validate_lable1_hint"
            android:lines="1"
            android:padding="10dp"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/line_color_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/tv_labe_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_validate_lable2" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/wallet_validate_lable2_hint"
            android:lines="1"
            android:padding="10dp"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        style="@style/app_submit_btn_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/submit" />

</LinearLayout>